<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673AB7"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="@dimen/dp_130"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:background="#F44336"
        android:text="@string/btnCancel"
        android:textColorLink="#FFEB3B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassInput"
        app:rippleColor="#FFEB3B" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/dp_130"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="60dp"
        android:background="#FFEB3B"
        android:text="@string/btnLogin"
        android:textColorLink="#FFEB3B"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassInput"
        app:rippleColor="#FFEB3B" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/dp_20"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/passHint"
        android:inputType="textPassword"
        android:minHeight="@dimen/dp_50"
        android:textColor="#FFFFFF"
        android:textColorHint="#B39DDB"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_290"
        android:layout_marginTop="@dimen/dp_20"
        android:contentDescription="@string/imgMain"
        android:src="@drawable/main_loging"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/dp_20"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/usernameHint"
        android:inputType="text"
        android:minHeight="@dimen/dp_50"
        android:textColorHint="#B39DDB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txtUserInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/userInput"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextText"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/txtPassInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/passInput"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/txtPass"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserInput" />

</androidx.constraintlayout.widget.ConstraintLayout>