<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673AB7"
    tools:context=".MainScreenActivity">

    <Button
        android:id="@+id/btnList"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_80"
        android:layout_marginTop="@dimen/dp_10"
        android:background="#FF9800"
        android:text="@string/btnList"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnManagement" />

    <Button
        android:id="@+id/btnManagement"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_80"
        android:layout_marginTop="@dimen/dp_10"
        android:background="#FFEB3B"
        android:text="@string/btnManagement"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddNew" />

    <Button
        android:id="@+id/btnAddNew"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_80"
        android:background="#8BC34A"
        android:text="@string/btnAdd"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTakePhoto" />

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_180"
        android:layout_marginTop="@dimen/dp_60"
        android:contentDescription="userImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtGreeting"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_5"
        android:text="Hello Mr. XYZ"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/sp_32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_5"
        android:background="#E91E63"
        android:text="@string/btnLogout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnList"
        app:layout_constraintVertical_bias="0.428" />

    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_5"
        android:text="Take a photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgUser" />
</androidx.constraintlayout.widget.ConstraintLayout>